--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,21 @@ ENV/
 env.bak/
 venv.bak/
 
+# Secrets
+*.pem
+*.key
+id_rsa
+id_dsa
+id_ecdsa
+id_ed25519
+id_rsa.pub
+id_dsa.pub
+id_ecdsa.pub
+id_ed25519.pub
+
+# Model files
+model/
+
 # Spyder project settings
 .spyderproject
 .spyderworkspace
