feat: Add document processing schemas and job status enums
- Introduced new Pydantic models for document processing results, job creation responses, and job status responses.
- Added a new enum for job statuses to standardize job state representation.
- Created a test script to verify the fix for the pipeline_id AttributeError in the DocumentOrchestrationService.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,8 +91,9 @@ services:
       dockerfile: api.Dockerfile
 
     command: celery -A app.tasks.celery_app.celery worker -l info -P gevent -c 4
+    working_dir: /app
     volumes:
-      - ./src:/app/src
+      - .:/app
     env_file:
       - .env
     environment:
@@ -113,8 +114,9 @@ services:
       context: .
       dockerfile: api.Dockerfile
     command: celery -A app.tasks.celery_app.celery beat -l info
+    working_dir: /app
     volumes:
-      - ./src:/app/src
+      - .:/app
     env_file:
       - .env
     environment:
